app/deploy/backend/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: products-backend 
  namespace: default 
spec:
  hosts:
  - api.demo.local
  gateways:
  - products-backend 
  http:
  - route:
    - destination:
        host: products-backend 
    corsPolicy:
      allowOrigin:
      - http://products.demo.local
      allowMethods:
      - GET
      - POST
